--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,10 +12,12 @@
   "dependencies": {
     "@workspace/ui": "workspace:*",
     "lucide-react": "0.456.0",
+    "next": "14.2.17",
+    "next-auth": "4.24.11",
     "next-themes": "^0.4.3",
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "18.3.1",
+    "react-audio-visualize": "^1.2.0",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
